# snake-game

./: .gitignore  README.md  pyproject.toml
src/snake_game/: __init__.py  direction.py  food.py  game.py  main.py  settings.py  snake.py
tests/: test_food.py  test_snake.py
